# grassfeeder

./: .gitignore  .project  README.md
grassfeed_rs/: Cargo-Debian.toml  Cargo.toml  README.md  prepare-debian.sh  prepare-linux.sh  tree.txt
grassfeed_rs/app-changes/: 0000:0.0.1.txt  0000:0.0.2.txt  0001:0.0.2.txt  0002:0.0.3.txt  0003:0.0.4.txt  0003:00.0.4.txt  0004:0.0.5.txt  0005:0.0.6.txt  0005:00.0.6.txt  0006:0.0.7.txt  0007:0.0.8.txt  0008:0.0.9.txt  0009:0.1.0.txt  0010:0.1.1.txt  0010:00.1.1.txt  0011:0.1.2.txt  0012:0.1.3.txt  0013:0.1.4.txt  0014:0.1.5.txt  0015:0.1.6.txt  0016:0.1.7.txt  0017:0.1.8.txt  0018:0.1.9.txt  0019:0.2.0.txt  0020:0.2.1.txt  0021:0.2.2.txt  0022:0.2.3.txt  0023:0.2.4.txt  0024:0.2.5.txt  0025:0.2.6.txt  0025:0.2.7.txt  0026:0.2.7.txt  0027:0.2.8.txt  0028:0.2.9.txt  0029:0.3.0.txt  0030:0.3.1.txt  0031:0.3.2.txt  0032:0.3.3.txt  0033:0.3.4.txt  0033:0.3.5.txt  (+2 more)
grassfeed_rs/app-g3sources/: Cargo.toml  src-releases  unpack-sources.sh
grassfeed_rs/app-g3sources/src/: lib.rs
grassfeed_rs/app-gtk3--ubuntu/: assets  install-packages-list.txt  src  ubuntu-stage2.docker
grassfeed_rs/app-gtk3-debian/: Cargo.toml  all-dependencies.txt  deb-sign.sh  debian-stage1.sh  debian-stage2.sh  debian-stage3a.sh  debstatus-leftover.txt  docker-stage1.sh  docker-stage4.sh  install-packages-list.txt  migrating.txt  reading-material.txt  stage3.docker  stage4.docker  tree.txt  unpack-sources.sh
grassfeed_rs/app-gtk3-debian/.cargo/: config.toml
grassfeed_rs/app-gtk3-debian/src-releases/: hard-xml-v1.21.0.tar.gz_  javascriptcore-rs-javascriptcore-rs-v0.16.0.tar.gz_
grassfeed_rs/app-gtk3-linux/: .gitignore  Cargo.toml  build.rs  build.rs_  debian-stage1.docker  debian-stage1.sh  debian-stage2.docker  debian-stage2.sh  debian-stage3a.sh  docker-stage1.sh  docker-stage2.sh  fedora-stage1.docker  fedora-stage1.sh  fedora-stage2.docker  fedora-stage2.sh  leftover.txt  stage1.docker  stage2.docker  suse-stage1.docker  suse-stage1.sh  suse-stage2.docker  suse-stage2.sh  ubuntu-stage1.docker  ubuntu-stage1.sh  ubuntu-stage2.docker  ubuntu-stage2.sh
grassfeed_rs/app-gtk3-linux/assets/: changelog.txt  deb-control.txt  github.com.schleglermarcus.grassfeeder.metainfo.xml  grassfeeder.desktop  grassfeeder.xpm
grassfeed_rs/app-gtk3-linux/src/: args_lang.rs  changelog.txt  main.rs  setup_logger.rs
grassfeed_rs/app-gtk3-ubuntu/: Cargo.toml  create-vendored.sh  deb-create.sh  deb-sign.sh  extract-dependencies.sh  install-packages-list.txt  install-packages-list.txt.0  install-packages.txt  target  ubuntu-stage1.docker  ubuntu-stage2.docker  ubuntu-stage2.sh  ubuntu-stage3.docker  ubuntu-stage3.sh  unpack-sources.sh  unpack-vendored.sh
grassfeed_rs/app-gtk3-ubuntu/.cargo/: config.toml
grassfeed_rs/app-gtk3-ubuntu/assets/: changelog.txt  deb-control.txt  grassfeeder.desktop
grassfeed_rs/app-gtk3-ubuntu/rust/: debcargo_2.5.0-2ubuntu0.1_amd64.deb  rustc_1.65.0+dfsg0ubuntu1-0ubuntu0.22.04.1_amd64.deb
grassfeed_rs/app-gtk3-win/: fedora-stage1.docker  fedora-stage2.docker  fedora1.sh  fedora2.sh  settings.ini  stage1.sh  stage2.sh
grassfeed_rs/app-gtk3-win/win_portable_executable/: prepare_pe_util.sh
grassfeed_rs/context/: Cargo-deb.toml  Cargo-std.toml  Cargo.toml
grassfeed_rs/context/src/: appcontext.rs  buildconfig.rs  lib.rs
grassfeed_rs/dd-g3mid/: Cargo.toml
grassfeed_rs/dd-g3new/: Cargo.toml
grassfeed_rs/dd-g3new/src/: lib.rs
grassfeed_rs/dd-g3old/: Cargo.toml
grassfeed_rs/dd-g3old/src/: lib.rs
grassfeed_rs/fr_core/: Cargo-deb.toml  Cargo-std.toml  Cargo.toml  exopo.xml  fromrome.xml  niche.html  subscriptions.db  tree.txt
grassfeed_rs/fr_core/src/: grassfeeder.rs  lib.rs  timer.rs  util.rs
grassfeed_rs/fr_core/src/config/: configmanager.rs  init_system.rs  mod.rs  prepare_ini.rs  prepare_logger_rs.txt  setup_logger_prod.rs
grassfeed_rs/fr_core/src/controller/: browserpane.rs  contentdownloader.rs  contentlist.rs  guiprocessor.rs  isourcetree.rs  mod.rs  sourcetree.rs  statusbar.rs  (+3 more)
grassfeed_rs/fr_core/tests/: ctx_download.rs  db_load_test.rs  db_remove_deleted.rs  download_fetch.rs  download_icons.rs  downloader_dummy.rs  extract_feed_url.rs  extract_icon_url.rs  extract_icon_url.rs.txt  feedsource_dummy.rs.txt  feedsources_various.rs  logger_config.rs  new_entries_filter.rs  shutdown_store_clean.rs  simpleui.rs  t_contentlist.rs  t_downloader.rs  t_icons.rs  t_messages.rs  t_messages_repo.rs  tree_drag_common.rs  tree_drag_ok.rs  tree_drag_work.rs  unzipper.rs
grassfeed_rs/fr_gtk/: Cargo-deb.toml  Cargo-std.toml  Cargo.toml
grassfeed_rs/fr_gtk/examples/: generate_icons.rs
grassfeed_rs/fr_gtk/src/: cell_data_func.rs  dialogs.rs  gtk_object_tree.rs  lib.rs  load_css.rs  messagelist.rs  statistics_list.rs  systray_icon.rs  treeview2.rs  util.rs
grassfeed_rs/fr_gtk/tests/: generate_icons.rs  logger_config.rs  systray.rs  systray.rs.txt
grassfeed_rs/gui_layer/: Cargo-deb.toml  Cargo.toml
grassfeed_rs/gui_layer/src/: abstract_ui.rs  gui_values.rs  lib.rs
grassfeed_rs/resources/: Cargo-deb.toml  Cargo-std.toml  Cargo.toml  build.rs  version.txt
grassfeed_rs/resources/locales/: de.yml  en.yml
grassfeed_rs/resources/src/: application_id.rs  changelog_debian.rs  gen_icons.rs  gitversion.rs  id.rs  lib.rs  loc.rs  main.rs  names.rs  parameter.rs  windowconfig.rs
grassfeed_rs/resources/tests/: translations.rs  write_changelog.rs
grassfeed_rs/testing/: Cargo.toml  README.md  buiild-release.txt  build-release.txt  dependency-issue.txt  todo.txt  tree.txt
grassfeed_rs/testing/examples/: regular.rs  working.rs
grassfeed_rs/testing/src/: lib.rs  logger_config.rs  logger_config_local.rs  main.rs
grassfeed_rs/testing/tests/: db_cleaner.rs  db_load_test.rs  miniserv.rs  run_reg.rs  rungui.rs  subs_json_sql.rs  subs_serde.rs  write_changelog.rs
grassfeed_rs/ui_gtk/: Cargo-deb.toml  Cargo-std.toml  Cargo.toml
grassfeed_rs/ui_gtk/src/: dialogdatadistributor.rs  gtkmodel_updater.rs  gtkrunner.rs  iconloader.rs  keyboard_codes.rs  lib.rs  runner_internal.rs  ui_value_adapter.rs
grassfeed_rs/ui_gtk/tests/: commandlist.rs
(+135 files in other folders)
