[package]
name = "app-gtk3-debian"
version = "0.1.8-B5"
edition = "2021"
description = "Feed Reader Linux-Gtk3 Application"
license = "LGPL-3"

[[bin]]
name = "grassfeeder"
path = "src/main.rs"


# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
# Note: crates.io does not allow packages to be published with path dependencies
# (path dev-dependencies are ignored).
#
[dependencies]
gui_layer = { path = "../gui_layer" }
context = { path = "../context" }
fr_core = { path = "../fr_core", features = ["g3sources", "ui-gtk"] }
ui_gtk = { path = "../ui_gtk", features = ["g3sources"] }
resources = { path = "../resources" }


dd = { package = "app-g3sources", path = "../app-g3sources" }
rust-i18n = { version = "*", path = "../app-g3sources/target/rust-i18n-1.1.1" }

fern = { version = "*", features = ["colored", "chrono"] }
syslog = ">=6.0.1"
chrono = ">=0.4.19"
# gumdrop = ">=0.8.1"	#  the debian packages only have 0.7.0
gumdrop = ">=0.7.0"
# log = ">=0.4.14"	# the debian packages only have 0.4.11
log = ">=0.4.11"
# once_cell = ">=1.12.0"	# the debian packages only have 1.9.0
once_cell = ">=1.9.0"
# xdg = ">=2.4.1"		# the debian packages only have 2.2.0-3
xdg = ">=2.2"


[profile.release]
opt-level = 's' # Optimize for size.
lto = true      # Enable Link Time Optimization
strip = true    # Strip symbols from binary


[package.metadata.deb]
maintainer = "Marcus <schlegler_marcus@posteo.de>"
copyright = "2022 <schlegler_marcus@posteo.de>"
name = "grassfeeder"
extended-description = "This application polls Feeds (Streams of messages) regularly and presents them in a list of events. Browser Urls of blogs, news sites etc. can be dropped and create a new subscription. It reads Atom and several RSS versions."
section = "web"
priority = "optional"
assets = [
  [
    "target/release/grassfeeder",
    "/usr/bin/",
    "755",
  ],
  [
    "assets/changelog.gz",
    "/usr/share/doc/grassfeeder/",
    "0644",
  ],
  [
    "assets/grassfeeder.desktop",
    "/usr/share/applications/",
    "0644",
  ],
  [
    "assets/grassfeeder.xpm",
    "/usr/share/pixmaps/grassfeeder/",
    "0644",
  ],
  #	 ["assets/usr/share/pixmaps/grassfeeder/grassfeeder-indicator2.png", "/usr/share/pixmaps/grassfeeder/", "0644"],
]

[package.metadata.i18n]
available-locales = ["en", "de"]
default-locale = "en"
