[package]
name = "app-gtk3-debian"
version = "0.1.9-B1"
edition = "2021"
description = "Feed Reader Linux-Gtk3 Application"
license = "LGPL-3"

[[bin]]
name = "grassfeeder"
path = "src/main.rs"


[dependencies]
gui_layer = { path = "../gui_layer" }
context = { path = "../context" }
fr_core = { path = "../fr_core", features = [ "ui-gtk", "legacy3gtk14"] }
resources = { path = "../resources" } #  , features = ["g3sources"]
rust-i18n = { version = "1.1.1" , path = "../app-gtk3-debian/target/rust-i18n-1.1.1" }


fern = { version = ">=0.6", features = ["colored", "chrono"] }
syslog = ">=6.0.1"
chrono = ">=0.4.19"
gumdrop = ">=0.7.0"
log = ">=0.4.11"
once_cell = ">=1.9.0"
xdg = ">=2.2"



[profile.release]
opt-level = 's' # Optimize for size.
lto = true      # Enable Link Time Optimization
strip = true    # Strip symbols from binary


[package.metadata.deb]
maintainer = "Marcus <schlegler_marcus@posteo.de>"
copyright = "2022 <schlegler_marcus@posteo.de>"
name = "grassfeeder"
extended-description = "This application polls Feeds (Streams of messages) regularly and presents them in a list of events. Browser Urls of blogs, news sites etc. can be dropped and create a new subscription. It reads Atom and several RSS versions."
section = "web"
priority = "optional"
assets = [
  [
    "target/release/grassfeeder",
    "/usr/bin/",
    "755",
  ],
  [
    "assets/changelog.gz",
    "/usr/share/doc/grassfeeder/",
    "0644",
  ],
  [
    "assets/grassfeeder.desktop",
    "/usr/share/applications/",
    "0644",
  ],
  [
    "assets/grassfeeder.xpm",
    "/usr/share/pixmaps/grassfeeder/",
    "0644",
  ],
  #	 ["assets/usr/share/pixmaps/grassfeeder/grassfeeder-indicator2.png", "/usr/share/pixmaps/grassfeeder/", "0644"],
]

[package.metadata.i18n]
available-locales = ["en", "de"]
default-locale = "en"
