[package]
name = "dd-g3new"
version = "0.1.0"
edition = "2021"
description = "distribution dependent package mounting layer  "


[dependencies]
rust-i18n = { version = ">=1.1.4", optional = true }
# rust-i18n = { version = ">=1.0.1", path = "../app-gtk3-debian/target/rust-i18n-1.1.1" }

rusqlite = { version = ">=0.28.0", features = ["bundled"], optional = true }
# rusqlite_l = { package="rusqlite", optional=true,  version = "0.25.2", features = ["bundled"], path="../app-gtk3-debian/target/rusqlite-sys0.25.2" }

png = { version = ">=0.17.7", optional = true }
#png_l =  {package="png", optional=true,   version="0.17.5",  path="../app-gtk3-debian/target/image-png-0.17.5" }

image = { version = ">=0.24.5", optional = true }
# image_l = {package="image", optional=true,  version=">=0.24.2", path="../app-gtk3-debian/target/image-0.24.5" }

jpeg-decoder = { version = ">=0.3", optional = true }
# jpeg_decoder_l = { package="jpeg-decoder", optional=true, version="=0.1.22", path="../app-gtk3-debian/target/jpeg-decoder-0.3.0" }

ico = { version = ">=0.3.0", optional = true }
#ico_l = { package="ico", optional=true, version="0.1.0", path="../app-gtk3-debian/target/rust-ico-0.3.0" }

# usvg = "0.23.0"	# compile error with 0.24.0. https://github.com/RazrFalcon/resvg/issues/552
usvg = { version = "0.23", optional = true } ## downgrading for now. Later TODO: upgrade and adapt the code
# usvg_l  = {  package="usvg", optional=true,  version=">0.24",  path="../app-gtk3-debian/target/resvg-0.29.0/usvg" }


# xmlem = "=0.2.2"	 "=0.2.3"  # Produces error:
# error[E0599]: no method named `unescape_value` found for struct `Attribute` in the current scope
# .cargo/registry/src/github.com-1ecc6299db9ec823/xmlem-0.2.2/src/document.rs:373:42
#    373 |                         let value = attr.unescape_value().unwrap();
xmlem = { version = "0.2.1" }
# xmlem_l = { package="xmlem", optional=true, version="=0.2.0",  path = "../app-gtk3-debian/target/xmlem-0.2.0"}

flume = { version = ">=0.10.14", optional = true }
#flume = { version = ">=0.10.9", path = "../app-gtk3-debian/target/flume-master" }


## todo  1.3 available
feed-rs = { version = ">=1.3.0", optional = true }
# feed-rs = { version = ">=1.1.0", path = "../app-gtk3-debian/target/feed-rs-1.2.0/feed-rs" , optional = true   }
