[package]
name = "dd-g3new"
version = "0.1.0"
edition = "2021"
description = "distribution dependent package selection : mint21 and newer  "


[dependencies]
gio = { version = "=0.15.5" }
webkit2gtk = { version = "=0.18.2", default-features = false, features = [
  "v2_36",
] }
rust-i18n = { version = ">=1.1.4" }
rusqlite = { version = ">=0.28.0", features = ["bundled"] }
png = { version = ">=0.17.7" }
image = { version = ">=0.24.0" }
jpeg-decoder = { version = ">=0.2.0" } # =0.3.0 problem mit rayon, in zusammenhang mit debian-alt. next tactic downgrade
ico = { version = ">=0.3.0" }
# usvg = "0.23.0"	# compile error with 0.24.0. https://github.com/RazrFalcon/resvg/issues/552
usvg = { version = ">=0.24" }                          ## downgrading for now. Later TODO: upgrade and adapt the code
flume = { version = ">=0.10.14" }
feed-rs = { package = "feed-rs", version = ">=1.3.0" }
log = { version = ">=0.4.17" }
libwebp-image = { version = "0.3.0" }
url = { version = ">=2.3.1" }
ureq = { version = ">=2.6.2" }
once_cell = { version = ">=1.17.0" }
itertools = { version = ">=0.10.5" }
gdk-sys = { version = "^0.15.1" }
#gtk = { version = "0.16.2", features = ["v3_24_30 "] }	#    2023-03 apply this, deprecates ubuntu20
gtk = { version = "0.15.5", features = ["v3_22_30"] }
gdk = { version = "=0.15.4" }
gif = { version = ">=0.12.0" }



# gtk_l = { package = "gtk", optional = true, version = "0.14.3", features = [  "v3_22_30",] } # downgrade for debian integration
glib = { version = "=0.15.5", optional = true }
# glib_l = { package = "glib", version = "0.14.8", optional = true }   # downgrade for debian repo
webkit2gtk-sys = { version = "=0.18.0", optional = true }
## webkit2gtk_sys_l = { package = "webkit2gtk-sys", version = "0.16.0", optional = true, path = "../app-gtk3-debian/target/webkit2gtk-rs-webkit2gtk-rs-v0.16.0/sys" }

## TODO see if pinning this is needed
#soup2 = { version = "=0.2.1", optional = true }
#soup2-sys = { version = "=0.2.0", optional = true }


gdk-pixbuf = { version = "^0.15.11", optional = true }
# gdk-pixbuf = ">=0.14.0" 			# downgrade for debian integration


lz4-compression = { version = "0.7.0" } #  , optional = true
# lz4-compression = { version = "0.7.0", path = "../app-gtk3-debian/target/lz4-compression-0.7" }

serde = { version = ">=1.0.133" } # , optional = true 
# serde = ">=1.0.130" 	# downgrade for debian repo

serde_json = { version = ">=1.0.81" } # , optional = true
# serde_json = ">=1.0.45" 	# Downgrade for debian repo

base64 = { version = "=0.13.0", optional = true }
# base64 = { version = ">=0.21.0", optional = true }  # too new, gives warnings
# base64 = "^0.13.0"


chrono = { version = ">=0.4.24", optional = true }
# chrono = ">=0.4.19"

opml = { version = ">=1.1.5" } #  , optional = true 
# opml = { version = ">=1.1.3", path = "../app-gtk3-debian/target/opml/opml_api" }

proc-status = { version = ">=0.1.1" } #  , optional = true
# proc-status = { version = ">=0.1.1", path = "../app-gtk3-debian/target/proc-status-0.1.1" }

regex = { version = ">=1.7.1", optional = true } #  ">=1.5.6"	
# regex = ">=1.5.4" 	# Downgrade for debian repo

textcode = { version = ">=0.2.2" } # , optional = true
# textcode = { version = ">=0.2.2", path = "../app-gtk3-debian/target/textcode-0.2.2" }

tinybmp = { version = ">=0.4.0" }
#tinybmp = { version = ">=0.3.3", path = "../app-gtk3-debian/target/tinybmp-0.4.0" }

tl = { version = ">=0.7.7" } # , optional = true 
# tl = { version = ">=0.7.5", path = "../app-gtk3-debian/target/tl-0.7.7" }

signal-hook = { version = ">=0.3.15", optional = true }
# signal-hook = ">=0.3.13"	# Downgrade for debian repo

javascriptcore-rs-sys = { version = "<=0.4.0", optional = true }

webbrowser = { version = ">=0.7.1", optional = true }
# webbrowser = ">=0.5"	# Downgrade for debian repo

xmlparser = { version = ">=0.13.5" }
# xmlparser = ">=0.11"  			# Downgrade for debian repo


## TODO 0.7  has no more colors.  seek another alternative
fern = { version = "=0.6.1", features = ["colored"], optional = true }
