[package]
name = "dd-g3old"
version = "0.1.0"
edition = "2021"
description = "distribution dependent package selection : debian repository "

##
[dependencies]
xmlem = { package = "xmlem", version = "=0.2.0", path = "../app-gtk3-debian/target/xmlem-0.2.0" } # , optional = true 
feed-rs = { version = "1.2.0", path = "../app-gtk3-debian/target/feed-rs-1.2.0/feed-rs" }  # , optional = true 
ico = {  version="0.3.0", path="../app-gtk3-debian/target/rust-ico-0.3.0" } #    optional=true,  version="0.1.0", 
image = {  version="=0.24.5", path="../app-gtk3-debian/target/image-0.24.5" } #  optional=true,  =0.24.2

# url = { version = "=2.3.1", optional = true } # ">=2.2.2" 
url = { version = "=2.3.0", path = "../app-gtk3-debian/target/rust-url-2.3.0/url" }

# ureq = { version = ">=2.6.2", optional = true } #  ">=2.4.0" 
ureq = { version = "=2.6.2", path = "../app-gtk3-debian/target/ureq-2.6.2" }


# flume = { version = ">=0.10.14", optional = true }  #   ">=0.10.9" 
flume = { version = "=0.10.14", path = "../app-gtk3-debian/target/flume-master" }


# -------------------

#gtk = { version = "0.16.2", features = ["v3_24_30 "] }	#    2023-03 apply this, deprecates ubuntu20
gtk = { version = "0.15.5", features = ["v3_22_30"], optional = true }
# gtk_l = { package = "gtk", optional = true, version = "0.14.3", features = [  "v3_22_30",] } # downgrade for debian integration

glib = { version = "=0.15.5", optional = true }
# glib_l = { package = "glib", version = "0.14.8", optional = true }   # downgrade for debian repo

gio = { version = "=0.15.5", optional = true }
# gio_l = {package="gio"   , version="0.14.8"  , optional = true   }    # downgrade for debian repo

webkit2gtk = { version = "=0.18.2", default-features = false, features = [
  "v2_36",
], optional = true }
## webkit2gtk_l = { package = "webkit2gtk", version = "0.16.0", default-features = false, features = [  "v2_30",], optional = true, path = "../app-gtk3-debian/target/webkit2gtk-rs-webkit2gtk-rs-v0.16.0/" } # downgrade for debian repo

webkit2gtk-sys = { version = "=0.18.0", optional = true }
## webkit2gtk_sys_l = { package = "webkit2gtk-sys", version = "0.16.0", optional = true, path = "../app-gtk3-debian/target/webkit2gtk-rs-webkit2gtk-rs-v0.16.0/sys" }

## TODO see if pinning this is needed
#soup2 = { version = "=0.2.1", optional = true }
#soup2-sys = { version = "=0.2.0", optional = true }


rust-i18n = { version = ">=1.1.4", optional = true }
# rust-i18n = { version = ">=1.0.1", path = "../app-gtk3-debian/target/rust-i18n-1.1.1" }

rusqlite = { version = ">=0.28.0", features = ["bundled"], optional = true }
# rusqlite_l = { package="rusqlite", optional=true,  version = "0.25.2", features = ["bundled"], path="../app-gtk3-debian/target/rusqlite-sys0.25.2" }

png = { version = ">=0.17.7", optional = true }
#png_l =  {package="png", optional=true,   version="0.17.5",  path="../app-gtk3-debian/target/image-png-0.17.5" }


jpeg-decoder = { version = ">=0.3", optional = true }
# jpeg_decoder_l = { package="jpeg-decoder", optional=true, version="=0.1.22", path="../app-gtk3-debian/target/jpeg-decoder-0.3.0" }


# usvg = "0.23.0"	# compile error with 0.24.0. https://github.com/RazrFalcon/resvg/issues/552
usvg = { version = "0.23", optional = true } ## downgrading for now. Later TODO: upgrade and adapt the code
# usvg_l  = {  package="usvg", optional=true,  version=">0.24",  path="../app-gtk3-debian/target/resvg-0.29.0/usvg" }




log = { version = ">=0.4.17", optional = true } #  ">=0.4.14"
# log = "0.4.11"    # Downgrade for debian repo

libwebp-image = { version = "0.3.0", optional = true }
# libwebp-image = { version = "0.3.0", path = "../app-gtk3-debian/target/libwebp-image-rs-0.3.0" }



once_cell = { version = ">=1.17.0", optional = true } # ">=1.12.0" 
# once_cell = ">=1.9" # Downgrade for debian repo


gdk = { version = "=0.15.4", optional = true }
# gdk = ">=0.14.3" # downgrade for debian integration

gdk-pixbuf = { version = "^0.15.11", optional = true }
# gdk-pixbuf = ">=0.14.0" 			# downgrade for debian integration

gdk-sys = { version = "^0.15.1", optional = true }
# gdk-sys = ">=0.14.0"  		# downgrade for debian integration

lz4-compression = { version = "0.7.0", optional = true }
# lz4-compression = { version = "0.7.0", path = "../app-gtk3-debian/target/lz4-compression-0.7" }

serde = { version = ">=1.0.133", optional = true }
# serde = ">=1.0.130" 	# downgrade for debian repo

serde_json = { version = ">=1.0.81", optional = true }
# serde_json = ">=1.0.45" 	# Downgrade for debian repo

base64 = { version = "=0.13.0", optional = true }
# base64 = { version = ">=0.21.0", optional = true }  # too new, gives warnings
# base64 = "^0.13.0"

itertools = { version = ">=0.10.5", optional = true }
# itertools = "0.10.1"

chrono = { version = ">=0.4.24", optional = true }
# chrono = ">=0.4.19"

opml = { version = ">=1.1.5", optional = true }
# opml = { version = ">=1.1.3", path = "../app-gtk3-debian/target/opml/opml_api" }

proc-status = { version = ">=0.1.1", optional = true }
# proc-status = { version = ">=0.1.1", path = "../app-gtk3-debian/target/proc-status-0.1.1" }

regex = { version = ">=1.7.1", optional = true } #  ">=1.5.6"	
# regex = ">=1.5.4" 	# Downgrade for debian repo

textcode = { version = ">=0.2.2", optional = true }
# textcode = { version = ">=0.2.2", path = "../app-gtk3-debian/target/textcode-0.2.2" }

tinybmp = { version = ">=0.4.0", optional = true }
#tinybmp = { version = ">=0.3.3", path = "../app-gtk3-debian/target/tinybmp-0.4.0" }

tl = { version = ">=0.7.7", optional = true }
# tl = { version = ">=0.7.5", path = "../app-gtk3-debian/target/tl-0.7.7" }

signal-hook = { version = ">=0.3.15", optional = true }
# signal-hook = ">=0.3.13"	# Downgrade for debian repo

javascriptcore-rs-sys = { version = "<=0.4.0", optional = true }

webbrowser = { version = ">=0.7.1", optional = true }
# webbrowser = ">=0.5"	# Downgrade for debian repo

xmlparser = { version = ">=0.13.5", optional = true }
# xmlparser = ">=0.11"  			# Downgrade for debian repo

gif = { version = ">=0.12.0", optional = true }
# gif = ">=0.10.2"  # Downgrade for debian repo

fern = { version = ">=0.6.1", features = ["colored"], optional = true }
